--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello from the Azure Back to School initiative!</h1>
+<h1>Hello There! Azure DevOps </h1>
 
 Welcome to your new app.
 
